# RathausRot

./: .env.example  .gitignore  .openclaude-profile.json  README.md  config.example.yaml  config.sh  install.sh  pyproject.toml  requirements.txt  setup.py  start.sh  stop.sh
.github/workflows/: ci.yml
rathausrot/: __init__.py  __main__.py  calendar_generator.py  command_handler.py  config_manager.py  database.py  formatter.py  healthcheck.py  llm_client.py  main.py  matrix_bot.py  models.py  py.typed  scheduler.py  scraper.py  setup_wizard.py  utils.py
tests/: test_command_handler.py  test_config_manager.py  test_formatter.py  test_healthcheck.py  test_llm_client.py  test_main.py  test_matrix_bot.py  test_scheduler.py  test_scraper.py  test_utils.py
