[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rathausrot"
version = "0.1.0"
description = "Kommunalpolitik-Bot für Matrix – automatische Analyse von Ratssitzungen"
license = "GPL-3.0-only"
requires-python = ">=3.9"
dependencies = [
    "matrix-nio[e2e]>=0.21.0,<1.0",
    "requests>=2.31.0,<3.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "pdfplumber>=0.10.0,<1.0",
    "pyyaml>=6.0,<7.0",
    "schedule>=1.2.0,<2.0",
    "aiohttp>=3.9.0,<4.0",
    "python-dateutil>=2.8.0,<3.0",
    "psutil>=5.9.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rathausrot = "rathausrot.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["rathausrot*"]
